WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170487
Air::eliminateDeadCode() should not use a HashSet
https://bugs.webkit.org/show_bug.cgi?id=170487
Summary
Air::eliminateDeadCode() should not use a HashSet
Filip Pizlo
Reported
2017-04-04 18:11:41 PDT
Patch forthcoiming.
Attachments
the patch
(11.20 KB, patch)
2017-04-04 18:13 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2017-04-04 18:13:12 PDT
Created
attachment 306236
[details]
the patch
Filip Pizlo
Comment 2
2017-04-04 18:19:07 PDT
Landed in
https://trac.webkit.org/changeset/214923/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug