Source/WTF/wtf/BitVector.h
@@ -307,6 +307,11 @@ public:
             m_index = m_bitVector->findBit(m_index + 1, true);
             return *this;
         }
+
+        bool isAtEnd() const
+        {
+            return m_index >= m_bitVector->size();
+        }
         
         bool operator==(const iterator& other) const
         {
